data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1614.wast
;; 5. **Test Description:**     A function with a `br_table` instruction that uses a negative index set through stack manipulation before execution, followed by `unreachable` to ensure a trap for invalid negative indexing.    **Constraint Checked:** Tests handling of invalid negative indices resulting in trapping behavior with `unreachable`.    **Edge Case Relation:** Confirms traps for out-of-bounds negative indices in `br_table`.

(assert_invalid
  (module
    (func $br_table_negative_index
      (block
        (i32.const -1)
        (br_table 0 (unreachable))
      )
    )
  )
  "type mismatch"
)